# CourseWork

./: CMakeLists.txt  test
include/: AuthManager.h  ClubManager.h  ContractDetails.h  ContractedPlayer.h  FieldPlayer.h  FileManager.h  FreeAgent.h  Goalkeeper.h  IFileHandler.h  InputValidator.h  Menu.h  Player.h  SeedDemo.h  User.h  Utils.h
src/: AuthManager.cpp  ClubManager.cpp  ContractDetails.cpp  ContractedPlayer.cpp  FieldPlayer.cpp  FileManager.cpp  FreeAgent.cpp  Goalkeeper.cpp  InputValidator.cpp  Menu.cpp  Player.cpp  SeedDemo.cpp  User.cpp  main.cpp
